# dreadnought

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
.vim/: coc-settings.json
src/: cli.rs  lib.rs  main.rs  pool.rs  watch.rs
